--- a/index.html
+++ b/index.html
@@ -192,7 +192,24 @@
       </div>
       <div class="modal-body">
 
-        
+        <div class="container" id="calculatorcontainer">
+          <input type="number" id="calcdisplay">
+        <div class="btn-group btn-group-lg" role="group" aria-label="Large button group">
+  <button type="button" id="btn1" class="btn btn-outline-primary">1</button>
+  <button type="button" id="btn2" class="btn btn-outline-primary">2</button>
+  <button type="button" id="btn3" class="btn btn-outline-primary">3</button>
+</div>
+        <div class="btn-group btn-group-lg" role="group" aria-label="Large button group">
+  <button type="button" id="btn4" class="btn btn-outline-primary">4</button>
+  <button type="button" id="btn5" class="btn btn-outline-primary">5</button>
+  <button type="button" id="btn6"class="btn btn-outline-primary">6</button>
+</div>
+<div class="btn-group btn-group-lg" role="group" aria-label="Large button group">
+  <button type="button" id="btn7" class="btn btn-outline-primary">7</button>
+  <button type="button" id="btn8" class="btn btn-outline-primary">8</button>
+  <button type="button" id="btn9" class="btn btn-outline-primary">9</button>
+</div>
+        </div>
           
       </div>
       <div class="modal-footer">
