--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
   </header>
  <main>
 <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+  <img src="274B80EF-6A24-4427-BFFC-025355E6ED4C.png" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <h5 class="card-title">Dark Mode</h5>
+    <p class="card-text">Added a toggle for dark mode to my portfolio website.</p>
+    <a href="https://sem2093.github.io/portfolio/" class="btn btn-primary">Visit my portfolio!</a>
   </div>
 </div>
 
