--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" />
   </head>
 <body class="bg-primary-subtle">
-  <div class="card" style="width: 18rem;">
-  <img src="274B80EF-6A24-4427-BFFC-025355E6ED4C.png" class="card-img-top" alt="...">
+ <div class="card w-30">
   <div class="card-body">
-    <h5 class="card-title">Dark Mode</h5>
-    <p class="card-text">Added a toggle for dark mode to my portfolio website.</p>
-    <a href="https://sem2093.github.io/portfolio/" class="btn btn-primary">Visit my portfolio!</a>
+    <h5 class="card-title">Test</h5>
+    <p class="card-text">Seeing If bootstrap cards...</p>
+    <a href="#" class="btn btn-primary">Button</a>
+  </div>
+</div>
+  <div class="card w-30">
+  <div class="card-body">
+    <h5 class="card-title">Test</h5>
+    <p class="card-text">stack horizontally.</p>
+    <a href="#" class="btn btn-primary">Button</a>
   </div>
 </div>
   <header>
