--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </header>
        <!---------skill progress----------->
     <div class="skillsprogress">
-    <table class="table">
+    <table class="table table-sm">
   <thead>
     <tr>
       <th scope="col">Skill</th>
