--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
        <!---------skill progress----------->
     <div class="skillsprogress">
     <table class="table table-sm">
-  <thead>
+  <thead class="table-dark">
     <tr>
       <th scope="col">Skill</th>
       <th scope="col">Progress</th>
