--- a/index.html
+++ b/index.html
@@ -119,7 +119,13 @@
   </div>
   <div class="row">
     <div class="col">
-     
+     <div class="card w-30">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <a href="#" class="btn btn-primary">Button</a>
+  </div>
+</div>
 </div>
     </div>
     <div class="col">
