--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Steven Miller</title> 
  <link rel="stylesheet" href="https://sem2093.github.io/portfolio/css/styles.css" />
- <link rel="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
-<link rel= "stylesheet" href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" />
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
+<link rel="stylesheet" href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" />
   </head>
   <body class="bg-primary-subtle">
