--- a/nav.html
+++ b/nav.html
@@ -1,1 +1,14 @@
-
+<ul class="nav">
+  <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="#">Active</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">nav</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">portfolio</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+  </li>
+</ul>
