--- a/nav.html
+++ b/nav.html
@@ -6,7 +6,7 @@
     <a class="nav-link" href="#">nav</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">portfolio</a>
+    <a class="nav-link" href="index.html">portfolio</a>
   </li>
   <li class="nav-item">
     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
