--- a/nav.html
+++ b/nav.html
@@ -1,9 +1,9 @@
 <ul class="nav">
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="#">Active</a>
+    <a class="nav-link active" aria-current="page" href="https://sem2093.github.io/portfolio/">liveportfolio</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">nav</a>
+    <a class="nav-link" href="nav.html">nav</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="index.html">portfolio</a>
