--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="col">
       <!---------Veritcal Tabs--------->
       
-      <div class="tab-content nav flex-column" id="nav-tabContent">
+      <div class="tab-content" id="nav-tabContent" aria-orientation="vertical" >
   <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">...</div>
   <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab" tabindex="0">...</div>
   <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab" tabindex="0">...</div>
