--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </nav>
   </header>
       <!--beginning of two columns-->
+    <div class="container text-center">
   <div class="row">
     <div class="col">
       <div class="card w-100">
@@ -42,7 +43,7 @@
       </div>
     </div>
   </div>
-
+    </div>
 
     
     <!--beginning of grid container-->
