--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
   </header>
 <br>
     <main>
+
+  <h1 class="display-1">Steven Miller<small class="text-body-secondary">Developer</small></h1>
+  
+
+      
   <!----------Off Canvas Buttons--->
 <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSkills" aria-controls="offcanvasSkills">Skills Progress</button>
 <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCerts" aria-controls="offcanvasCerts">Recognition</button>
