--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <h1 class="display-1">Steven Miller <small class="text-body-secondary"> Developer</small></h1>
 
     
-<img src="E6C1D7AA-11FE-4540-A0B6-7DAB14AA0B4E.png" class="rounded float-end" alt="developement">
+<img src="E6C1D7AA-11FE-4540-A0B6-7DAB14AA0B4E.png" class="rounded float-end img-fluid" alt="developement">
       
   <br>
 
