--- a/index.html
+++ b/index.html
@@ -212,12 +212,28 @@
     <a class="navbar-brand" href="#"></a>
   </div>
 </nav>
-        <nav class="navbar sticky-bottom bg-dark border-bottom border-body" data-bs-theme="dark">
+         <nav class="navbar sticky-bottom bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"></a>
   </div>
 </nav>
-        <nav class="navbar sticky-bottom bg-dark border-bottom border-body" data-bs-theme="dark">
+         <nav class="navbar sticky-bottom bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#"></a>
+  </div>
+</nav>
+         <nav class="navbar sticky-bottom bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#"></a>
+  </div>
+</nav>
+         <nav class="navbar sticky-bottom bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#"></a>
+  </div>
+</nav>
+
+         <nav class="navbar sticky-bottom bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"></a>
   </div>
