--- a/index.html
+++ b/index.html
@@ -217,6 +217,19 @@
 
   </div>     
   </nav>
+  
+  
+  <!--Project cards-->
+  <div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">My API Project</h5>
+    <p class="card-text">A page which sources many different APIS for its content.</p>
+    <a href="#" class="btn btn-primary">View Live</a>
+    <a href="#" class="btn btn-primary">View Code</a>
+  </div>
+</div>
+
         </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="index.js"></script>
