--- a/index.html
+++ b/index.html
@@ -221,12 +221,11 @@
   
   <!--Project cards-->
   <div class="card" style="width: 18rem;">
-  <img src="8955595D-2D7B-4679-AB4C-2848C588C524.png" class="card-img-top" alt="...">
+  <img src="" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">My API Project</h5>
-    <p class="card-text">A page which sources many different APIS for its content.</p>
-    <a href="#" class="btn btn-primary">View Live</a>
-    <a href="#" class="btn btn-primary">View Code</a>
+    <p class="card-text">A page which sources many different APIS for its content. Links to view project code provided on project page.</p>
+    <a href="https://sem2093.github.io/apiproject/" class="btn btn-primary">View Live</a>
   </div>
 </div>
 
